--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,12 +5,8 @@ repos:
     -   id: check-yaml
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
--   repo: https://github.com/psf/black
-    rev: 22.10.0
-    hooks:
-    -   id: black
 -   repo: https://github.com/python-poetry/poetry
-    rev: ''  # add version here
+    rev: '2.3.2'
     hooks:
     -   id: poetry-check
     -   id: poetry-lock
@@ -22,5 +18,4 @@ repos:
       name: black
       entry: poetry run black
       language: system
-      types: [file, python]
-      files: '^(src|test)/'
+      types: [python]
